<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="AGPowerStatus" Id="{766c1c31-1a9a-4a79-ad03-7e44c150b8c1}">
    <Declaration><![CDATA[TYPE AGPowerStatus :
STRUCT
	MotorPowerRaw AT%I* :INT;
	MotorPowerV :REAL;
	AGPowerRaw AT%I* :INT;
	AGPowerV:REAL;
	MotorPowerOk_1 AT%I* :BOOL;
	MotorPowerOk_2 AT%I* :BOOL;
	AGPowerOk_1 AT%I*:BOOL;
	AGPowerOk_2 AT%I*:BOOL;
	AllPSUOK :BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>